--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,8 +14,11 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Suggests: 
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Imports: 
     jsonlite,
     httr
+VignetteBuilder: knitr
